# arabic-cryptography

./: .gitignore  README.md  dependencies.txt  pyproject.toml  test.py
docs/: rapport.typ  tilsam.1.txt
gui/: README.md  cli-bridge.js  package-lock.json  package.json
gui/src/: App.js
src/: main1.py  main2.py
src/ciphers/: affine.py  cesar.py  common.py  frequency.py  normalize.py  substitution.py
src/tilsam/: main.py
src/tilsam.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/tilsam/alphabets/: __init__.py  arabic.py  base.py  english.py  french.py
src/tilsam/analysis/: __init__.py  bigram.py  frequency.py  scoring.py  tables.py
src/tilsam/ciphers/: __init__.py  affine.py  caesar.py  substitution.py
src/tilsam/cli/: __init__.py  app.py  io.py
src/tilsam/crack/: __init__.py  affine.py  caesar.py  candidate.py  substitution.py
src/tilsam/gui/: main.py  window.py
src/tilsam/web/: server.py
tests/: test.py  test.sh
tests/data/: ar_plain.txt  en_caesar_shift3_cipher_expected.txt  en_plain.txt  fr_plain.txt
tests/data/tmp/: ar_affine.txt  ar_affine_crack.txt  ar_analyze.txt  ar_caesar.txt  ar_caesar_crack.txt  ar_caesar_roundtrip.txt  ar_sub.txt  ar_sub_crack.txt  en_affine.txt  en_affine_crack.txt  en_affine_roundtrip.txt  en_analyze.txt  en_caesar.txt  en_caesar_crack.txt  en_sub.txt  en_sub_crack.txt  fr_affine.txt  fr_affine_crack.txt  fr_affine_roundtrip.txt  fr_analyze.txt  fr_caesar.txt  fr_caesar_crack.txt  fr_sub.txt  fr_sub_crack.txt
