[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tilsam"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
]

[project.optional-dependencies]
web = [
  "flask>=3.0",
]

[project.scripts]
tilsam = "tilsam.main:main"
tilsam-gui = "tilsam.gui.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
